tests/snapshots/examples_fixtures/Debug__Modules__Data__List.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Debug/Modules/Data/List.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E024]: MODULE PATH MISMATCH

Module name `Modules.Data.Other` doesn't match file path `examples/Debug/Modules/Data/List.flx`.

  --> examples/Debug/Modules/Data/List.flx:1:1
  |
1 | module Modules.Data.Other {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
